# berlin-sbahn-disruption

./: LICENSE  README.md  pyproject.toml
data/: vbb_sbahn_event_annotation_sources_2023_2026.json  vbb_sbahn_event_annotations_2023_2026.csv  vbb_sbahn_monthly_line_trends_2023_2026.csv  vbb_sbahn_monthly_network_trends_2023_2026.csv  vbb_sbahn_monthly_trend_notes_2023_2026.json  vbb_sbahn_quality_2019_onward.csv  vbb_sbahn_quality_sources.json  vbb_sbahn_tagesspiegel_crosscheck_2025.json
reports/: berlin_sbahn_reliability_conclusion.md  berlin_sbahn_reliability_trend.html
scripts/: build_final_report.py  build_vbb_sbahn_dataset.py  build_vbb_sbahn_event_annotations.py  build_vbb_sbahn_tagesspiegel_crosscheck.py
specs/research/: issue-2-primary-dataset.md  issue-4-event-annotations.md
tests/: test_build_final_report.py  test_build_vbb_sbahn_dataset.py  test_build_vbb_sbahn_event_annotations.py  test_build_vbb_sbahn_tagesspiegel_crosscheck.py
tests/fixtures/: vbb_sbahn_overview_fixture.html
